plottet front image, fixed iw bug, wrote report

--- a/report/report.bib
+++ b/report/report.bib
@@ -180,3 +180,31 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
       reportNumber   = "NSF-KITP-08-38, PUPT-2261",
       SLACcitation   = "%%CITATION = ARXIV:0803.3295;%%",
 }
+@article{PhysRevD.73.045013,
+  title = {Asymptotic perfect fluid dynamics as a consequence of AdS/CFT correspondence},
+  author = {Janik, Romuald A. and Peschanski, Robi},
+  journal = {Phys. Rev. D},
+  volume = {73},
+  issue = {4},
+  pages = {045013},
+  numpages = {8},
+  year = {2006},
+  month = {Feb},
+  doi = {10.1103/PhysRevD.73.045013},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.73.045013},
+  publisher = {American Physical Society}
+}
+@article{hartnoll8,
+      author         = "Hartnoll, Sean A.",
+      title          = "{Lectures on holographic methods for condensed matter
+                        physics}",
+      journal        = "Class.Quant.Grav.",
+      volume         = "26",
+      pages          = "224002",
+      doi            = "10.1088/0264-9381/26/22/224002",
+      year           = "2009",
+      eprint         = "0903.3246",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:0903.3246;%%",
+}
